[gd_scene load_steps=12 format=3 uid="uid://dbyericghyni5"]

[ext_resource type="Texture2D" uid="uid://c12fv1bd6p8e4" path="res://backgrounds/45371.jpg" id="1_0c7u2"]
[ext_resource type="Script" path="res://scripts_project/registro.gd" id="1_12otl"]
[ext_resource type="Texture2D" uid="uid://edwypwcli46n" path="res://icons/edfunnygames.png" id="2_0evag"]
[ext_resource type="Texture2D" uid="uid://di3elv7ufou2r" path="res://icons/flecha-atras.png" id="3_w110i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwhno"]
bg_color = Color(0.482353, 0.568627, 0.694118, 1)
border_width_left = 13
border_width_top = 9
border_width_bottom = 9
border_color = Color(0.482353, 0.568627, 0.694118, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86v0t"]
bg_color = Color(0.482353, 0.568627, 0.694118, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jc7t2"]
bg_color = Color(0.482353, 0.568627, 0.694118, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2u1pb"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.662745, 0.52549, 0.772549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ot0s4"]
bg_color = Color(0.552941, 0.403922, 0.666667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxwa5"]
bg_color = Color(0.396078, 0.207843, 0.482353, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rdigo"]
content_margin_left = 10.0
content_margin_top = 11.0
content_margin_right = 12.0
content_margin_bottom = 5.0

[node name="Registro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12otl")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0c7u2")

[node name="MarginContainerColor" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 524.0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainerColor"]
layout_mode = 2
color = Color(0.34902, 0.423529, 0.533333, 1)

[node name="MarginContainerLogo" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 14.0
offset_right = 109.0
offset_bottom = 103.0

[node name="logoEdFunny" type="TextureRect" parent="MarginContainerLogo"]
layout_mode = 2
texture = ExtResource("2_0evag")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 86.0
offset_top = -255.5
offset_right = 448.0
offset_bottom = 250.5
grow_vertical = 2

[node name="registroLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Registro"
horizontal_alignment = 1

[node name="labelValidacion" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="nombreInput" type="LineEdit" parent="VBoxContainer"]
show_behind_parent = true
layout_mode = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cwhno")
theme_override_styles/focus = SubResource("StyleBoxFlat_86v0t")
placeholder_text = "NOMBRE"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 17

[node name="apellidoPaternoInput" type="LineEdit" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cwhno")
theme_override_styles/focus = SubResource("StyleBoxFlat_jc7t2")
placeholder_text = "APELLIDO PATERNO"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 17

[node name="nombreUsuarioInput" type="LineEdit" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cwhno")
theme_override_styles/focus = SubResource("StyleBoxFlat_jc7t2")
placeholder_text = "NOMBRE DE USUARIO"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 17

[node name="emailInput" type="LineEdit" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cwhno")
theme_override_styles/focus = SubResource("StyleBoxFlat_jc7t2")
placeholder_text = "E-MAIL"

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 17

[node name="contrasenaInput" type="LineEdit" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cwhno")
theme_override_styles/focus = SubResource("StyleBoxFlat_jc7t2")
placeholder_text = "CONTRASEÃ‘A"
secret = true

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 17

[node name="registroButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_2u1pb")
theme_override_styles/hover = SubResource("StyleBoxFlat_ot0s4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wxwa5")
text = "REGISTRARSE"

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 36

[node name="RegresarButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -96.0
offset_right = 72.0
offset_bottom = -23.0
grow_vertical = 0
focus_mode = 0
theme_override_styles/pressed = SubResource("StyleBoxLine_rdigo")
toggle_mode = true
icon = ExtResource("3_w110i")
flat = true
expand_icon = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VBoxContainer/registroButton" to="." method="_on_registro_button_pressed"]
[connection signal="pressed" from="RegresarButton" to="." method="_on_back_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
